--- a/company.html
+++ b/company.html
@@ -28,8 +28,22 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+<!-- facebook表示させるためのstep1-->
 
 <body>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.12';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!----------------------------------->
+
     <!--header------------------------------------------>
     <header>
 
@@ -76,7 +90,7 @@
         <div class="container">
             <div class "row">
                 <div class="twelve columns">
-                    <h2>company info</h2>
+                    <h2>COMPANY INFO</h2>
                     <!--:after-->
                 </div>
             </div>
@@ -141,7 +155,7 @@
                         </ul>
                     </div>
 
-                    <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width="180" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
                         <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote>
                     </div>
                 </div>
@@ -191,7 +205,8 @@
         </div>
     </footer>
     <!-- //footer ------------------------------------------------------------->
-
+    
+    <!--sub_nav_liを表示させる為のscript-->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
         <!-- Toggleアニメーションの指示 -->
@@ -210,5 +225,6 @@
 
 
 </body>
+
 
 </html>
